# projects-tracker

./: .gitignore  Cargo.toml  README.md  appdata.json  go.mod  go.sum  gqlgen.yml  index.html  makefile  server.go  test.rs  tools.go
auth/: auth.go
client/: app.rs  console.rs  graphql.rs  lib.rs
client/gqlclient/graphql_client/src/: lib.rs
client/graphql-client/graphql_client/src/: reqwest.rs
database/: database.go  test_script.sql
graph/: generated.go  helpers.go  resolver.go  schema.graphql  schema.resolvers.go  schema.resolvers.txt  sr.txt
graph/client/: mutations.graphql  queries.graphql
graph/model/: models_gen.go
jwt/: jwt.go
server/: server.go
static/: appdata.json  test.go  test.html
static/html/: .index.html.swp
static/html/old/: index.html.txt
static/js/: app.ts.txt
static/js/old/: app.js
