[package]
name = "projects-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "client/main.rs"

[dependencies]
graphql-client = { path = "client/graphql-client", features = ["reqwest"] }
js-sys = "0.3.61"
lazy_static = "1.4"
reqwest = "^0.11"
serde = { version = "1.0.152", features = ["derive"] }
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4.34"
