[package]
name = "projects-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "client/lib.rs"

[dependencies]
anyhow = "*"
chrono = "0.4"
console_error_panic_hook = "*"
either = "*"
graphql_client = { path = "./client/graphql-client/graphql_client", features = ["reqwest"] }
futures = "0.3"
js-sys = "0.3.61"
lazy_static = "1.4"
serde = { version = "1.0.152", features = ["derive"] }
tracing-wasm = "*"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4.34"
yew = { version = "0.20.0", features = ["csr"] }

[dependencies.web-sys]
version = "0.3.61"
features = [
  "HtmlButtonElement",
  "HtmlFormElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
]
